test_programs/compile_failure/broken_impl/src/main.nr
// This used to crash the compiler
impl< Foo for
